feat: add parse-config
